--- a/package.json
+++ b/package.json
@@ -21,11 +21,9 @@
     "react-scripts": "4.0.3",
     "redux": "^4.1.0",
     "redux-logger": "^3.0.6",
-    "unstated-next": "^1.1.0",
     "vconsole": "^3.5.0",
     "web-vitals": "^1.0.1",
-    "web3": "^1.3.5",
-    "web3modal": "^1.9.3"
+    "web3": "^1.3.5"
   },
   "scripts": {
     "start": "react-scripts start",
