--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-scripts": "4.0.3",
     "redux": "^4.1.0",
     "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
     "vconsole": "^3.5.0",
     "web-vitals": "^1.0.1",
     "web3": "^1.3.5"
