--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.3.16",
     "@chakra-ui/react": "^1.6.0",
+    "@emotion-icons/bootstrap": "^3.11.0",
     "@emotion-icons/emotion-icon": "^4.0.0",
     "@emotion-icons/feather": "^3.0.0",
     "@emotion/react": "^11",
@@ -16,8 +18,11 @@
     "emotion-icons": "^3.13.0",
     "ethers": "^5.1.4",
     "framer-motion": "^4",
+    "graphql": "^15.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-infinite-scroller": "^1.2.4",
+    "react-query": "^3.15.2",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
